--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="./style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <div class="candle-count-display">
@@ -26,24 +27,7 @@
       <div class="drip drip2"></div>
       <div class="drip drip3"></div>
     </div>
-
-    <!-- Popup Modal (hidden by default) -->
-<div id="birthdayPopup" class="popup-modal" style="display:none;">
-  <div class="popup-content">
-    <h2>For You 💌</h2>
-    <button id="seeMessageBtn">See My Message</button>
-   </div>
-  </div>
-<!-- Letter (hidden by default) -->
-<div id="birthdayLetter" class="letter" style="display:none;">
-  <div class="letter-content">
-    <span class="close-letter">&times;</span>
-    <h3>To My Special Person,</h3>
-    <p>Your custom message here! Edit this text!</p>
-    <!-- Add more personalized content -->
-  </div>
-</div>
-
+    </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2"></script>
   </body>
