--- a/letter.html
+++ b/letter.html
@@ -160,12 +160,18 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Love_Heart_SVG.svg" alt="Heart">
     </div>
     <div class="message">
-      <h1>Happy Valentine's Day My Love</h1>
-      <p>You are someone who came into my life unexpectedly, you brought back my smile and you're helping me pick up the broken pieces of my heart. I thought I won't love again and give myself time but here I am falling in love with you everyday.</p>
-      <p>Today, February 14, a day away of 4 months since we met each other and luckily It's Valentine's day. I wrote this to remind you how amazing and loving of a girlfriend you are (I know wala pa but hehe). I know we have our fair share of misunderstandings but always know I love you always.</p>
-      <p>As we continue our journey together baby, I want you to know that my love for you grows each passing day. I know that sometimes we're not in the mood and our energy is not the same because of what's happening and baka tired after a long day of school and mga gawain. I'll always understand baby so we communicate okay. I will love everything about you. Let's grow together as individuals and as a couple my love.</p>
-      <p>Here's to a lifetime of laughter, bardagulan, movie nights, laro kahit ano, sneakysneaky;), love and unforgettable memories together. I love you more than you know my love, Thank you for everything that you do and for everything that you make me feel.</p>
-      <p>Yours forever and always,<br>tatin <3</p>
+      <h1>Happy Birthday Day Babiii</h1>
+<p>Every day and moment with you is special to me, but today is extra special because I value and am so thankful for your birth. Hindi ko man palaging nasasabi, pero sobrang laki ng impact mo sa buhay ko. You’ve changed my world in the best way possible.</p>
+
+<p>Thank you for sticking by my side through my ups and downs. You coming into my life made it worth living. Without you, my life would surely be dull. I’m very thankful kasi sakin ka binigay at hindi kay 🙄.</p>
+
+<p>I want you to know that I’m very proud of you, and I’ll always be. Even when you feel like no one’s there, I want you to remember—I always will be. I want to assure you na lahat ng paghihirap mo at sacrifices mo will be worth it someday. And if you’re tired, please take a break. When your soul’s exhausted, don’t push yourself. It’s okay to rest—you’ll always have my shoulder to lean on.</p>
+
+<p>Now that it’s your birthday, I want you to feel the love that you always give to others. I hope you take time to celebrate yourself, kasi deserve na deserve mo.</p>
+
+<p>Here’s to a lifetime of laughter, away, tampuhan, asaran, bemban----, love, and unforgettable memories together. I love you more than you know, my love. Thank you for everything you do and for everything you make me feel.</p>
+
+<p>Yours forever and always,<br>keng &lt;3</p>
     </div>
   </div>
 
@@ -194,7 +200,7 @@
         // Move heart to bottom after animation
         setTimeout(() => {
           $(".heart").addClass("at-bottom");
-        }, 500);
+        }, 800);
         
       } else {
         // Close letter
