--- a/letter.html
+++ b/letter.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Love Letter</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <audio id="bgMusic" loop>
+  <source src="Old_love.mp3" type="audio/mpeg">
+  </audio>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Hind:wght@300;400&display=swap');
     
