--- a/letter.html
+++ b/letter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Love Letter</title>
+  <title>Labyu boss><</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <audio id="bgMusic" loop>
   <source src="Old_love.mp3" type="audio/mpeg">
