--- a/letter.html
+++ b/letter.html
@@ -167,7 +167,7 @@
     <div class="message">
       <h1>Happy Birthday Day Babiii</h1>
 <p>Every day and moment with you is special to me, but today is extra special because I value and am so thankful for your birth. Hindi ko man palaging nasasabi, pero sobrang laki ng impact mo sa buhay ko. You’ve changed my world in the best way possible.</p>
-<p>Thank you for sticking by my side through my ups and downs. You coming into my life made it worth living. Without you, my life would surely be dull. I’m very thankful kasi sakin ka binigay at hindi kay 🙄.</p>
+<p>Thank you for sticking by my side through my ups and downs. You, coming into my life made it worth living. Without you, my life would surely be dull. I’m very thankful kasi sakin ka binigay at hindi kay 🙄.</p>
 <p>I want you to know that I’m very proud of you, and I’ll always be. Even when you feel like no one’s there, I want you to remember—I always will be. I want to assure you na lahat ng paghihirap mo at sacrifices mo will be worth it someday. And if you’re tired, please take a break. When your soul’s exhausted, don’t push yourself. It’s okay to rest—you’ll always have my shoulder to lean on.</p>
 <p>Now that it’s your birthday, I want you to feel the love that you always give to others. I hope you take time to celebrate yourself, kasi deserve na deserve mo.</p>
 <p>Here’s to a lifetime of laughter, away, tampuhan, asaran, bemban----, love, and unforgettable memories together. I love you more than you know, my love. Thank you for everything you do and for everything you make me feel.</p>
