--- a/letter.html
+++ b/letter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Labyu boss><</title>
+  <title>Labyu boss>_<</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <audio id="bgMusic" loop>
   <source src="Old_love.mp3" type="audio/mpeg">
@@ -170,7 +170,7 @@
 <p>Thank you for sticking by my side through my ups and downs. You, coming into my life made it worth living. Without you, my life would surely be dull. I’m very thankful kasi sakin ka binigay at hindi kay 🙄.</p>
 <p>I want you to know that I’m very proud of you, and I’ll always be. Even when you feel like no one’s there, I want you to remember—I always will be. I want to assure you na lahat ng paghihirap mo at sacrifices mo will be worth it someday. And if you’re tired, please take a break. When your soul’s exhausted, don’t push yourself. It’s okay to rest—you’ll always have my shoulder to lean on.</p>
 <p>Now that it’s your birthday, I want you to feel the love that you always give to others. I hope you take time to celebrate yourself, kasi deserve na deserve mo.</p>
-<p>Here’s to a lifetime of laughter, away, tampuhan, asaran, bemban----, love, and unforgettable memories together. I love you more than you know, my love. Thank you for everything you do and for everything you make me feel.</p>
+<p>Wishing you a more birthdays to come and here’s to a lifetime of laughter, away, tampuhan, asaran, bemban----, love, and unforgettable memories together. I love you more than you know, my love. Enjoy your day mahalll.</p>
 <p>Yours forever and always,<br>keng &lt;3</p>
     </div>
   </div>
